# docs/swagger.json
@@ -117,7 +117,7 @@
         },
         "/tests": {
             "get": {
-                "description": "Get a list of tests with summary information.",
+                "description": "Get a list of tests. If 'user_id' query param is provided, includes attempt status for that user.",
                 "produces": [
                     "application/json"
                 ],
@@ -125,6 +125,14 @@
                     "User - Tests \u0026 Attempts"
                 ],
                 "summary": "(User) List all available tests",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Optional User ID to check attempt status against",
+                        "name": "user_id",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -133,6 +141,12 @@
                             "items": {
                                 "$ref": "#/definitions/github_com_lshigami_Ringtails_internal_dto.TestSummaryDTO"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid User ID format",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_lshigami_Ringtails_internal_dto.ErrorResponse"
                         }
                     },
                     "500": {
@@ -551,8 +565,20 @@
                 "description": {
                     "type": "string"
                 },
+                "has_attempted_by_user": {
+                    "description": "True if the specified user has at least one attempt for this test. Omit if no user_id provided.",
+                    "type": "boolean"
+                },
                 "id": {
                     "type": "integer"
+                },
+                "last_attempt_score": {
+                    "description": "Score of the user's most recent attempt, if any.",
+                    "type": "number"
+                },
+                "last_attempt_status": {
+                    "description": "Status of the user's most recent attempt, if any.",
+                    "type": "string"
                 },
                 "question_count": {
                     "type": "integer"
